<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"



    android:id="@+id/pagina_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usuario_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/usuario_editText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/senai"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@id/usuario_textView" />

        <TextView
            android:id="@+id/senha_textView"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/senha_editText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/senai"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@id/usuario_textView" />


        <Button
            android:id="@+id/botaoLogin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/entrar" />



    </LinearLayout>



</RelativeLayout>